# talus-droid

./: .gitignore  AGENTS.md  README.md  talus-droid.repos  talus_ros.py  teleop_debug.py  teleop_drive.py
diag_mvp/: diag_mvp.ino  gamepad_debug.py  gamepad_mvp.py  gamepad_mvp2.py  gamepad_mvp3.py
docs/: HOSTS-CONTEXT.md  INSTALL-GUIDE.md  TEST-TRACK-KINECT-IMU-TF.md  WIRING.md
motor_diag/: motor_diag.ino
patches/: KinectV1-Ros2-disable-pointcloud-and-optical-frames.patch
scripts/: apply-kinect-patches  install-systemd-service  talus-up
src/talus_base/: package.xml  setup.cfg  setup.py  talus_base_bridge.py
src/talus_base/config/: bridge.yaml
src/talus_base/launch/: bridge.launch.py
src/talus_base/talus_base/: serial_bridge.py
src/talus_base/talus_base/kinect_validation/: __init__.py  artifacts.py  processes.py  runner.py  sampler.py  status.py  summary.py  usb.py
src/talus_base/test/: test_apply_kinect_patches.py  test_kinect_artifacts.py  test_kinect_packaging.py  test_kinect_processes.py  test_kinect_runner_execution.py  test_kinect_runner_plan.py  test_kinect_status.py  test_kinect_summary.py  test_kinect_usb.py
src/talus_bringup/: CMakeLists.txt  package.xml
src/talus_bringup/config/: frames.yaml  imu_filter.yaml  joy.yaml  teleop_twist_joy.yaml
src/talus_bringup/launch/: base.launch.py  base_teleop.launch.py  floor_test.launch.py  kinect.launch.py  odom_test.launch.py  slam_rtabmap.launch.py  teleop.launch.py
systemd/: talus-bringup.env  talus-bringup.service
talus_drive/: talus_drive.ino
talus_mvp/: talus_mvp.ino
(+11 files in other folders)
