<?xml version="1.0"?>
<package format="3">
  <name>talus_bringup</name>
  <version>0.1.0</version>
  <description>Bringup launch files and runtime configuration for Talus.</description>
  <maintainer email="felip@todo.todo">Felip</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>talus_base</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
